# melvin-ob

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  pos.csv  pull_all.sh  rustfmt.toml  tmux.conf
.github/workflows/: build-deploy.yaml  build_binary.yaml  build_docker.yaml  build_pages.yaml
src/: console_endpoint.rs  global_mode.rs  keychain.rs  logger.rs  main.rs  melvin_messages.rs
src/console_communication/: console_endpoint.rs  console_messenger.rs  melvin_messages.rs  mod.rs
src/flight_control/: beacon_controller.rs  camera_controller.rs  camera_state.rs  common.rs  flight_computer.rs  flight_state.rs  image_data.rs  mod.rs  objective_scheduler.rs  orbit_control.rs  supervisor.rs  task_controller.rs
src/flight_control/common/: bayesian_set.rs  beacon.rs  bitmap.rs  image_task.rs  img_buffer.rs  linked_box.rs  locked_task_queue.rs  math.rs  matrix.rs  mod.rs  orbit.rs  pinned_dt.rs  state_vector.rs  tests.rs  vec2d.rs  wrapped_squared_euclidean.rs
src/flight_control/imaging/: cycle_state.rs  file_based_buffer.rs  map_image.rs  mod.rs  sub_buffer.rs
src/flight_control/kalman_filter/: base_kalman.rs  beacon_kalman.rs  kalman.rs  mod.rs  pos_deviation_kalman.rs
src/flight_control/objective/: beacon_objective.rs  beacon_objective_done.rs  known_img_objective.rs  mod.rs  objective_base.rs  objective_type.rs  secret_img_objective.rs
src/flight_control/orbit/: burn_sequence.rs  characteristics.rs  closed_orbit.rs  index.rs  mod.rs  orbit_base.rs  tests.rs
src/flight_control/task/: atomic_decision.rs  atomic_decision_cube.rs  base_task.rs  end_condition.rs  image_task.rs  locked_task_queue.rs  mod.rs  score_grid.rs  switch_state_task.rs  task_controller.rs  tests.rs  vel_change_task.rs
src/http_handler/: common.rs  http_client.rs  http_handler_common.rs  http_request.rs  mod.rs
src/http_handler/http_request/: achievements_get.rs  announcements_get.rs  available_slots_get.rs  beacon_position_put.rs  configure_simulation_put.rs  control_put.rs  create_backup_get.rs  daily_map_post.rs  delete_objective_delete.rs  mod.rs  modify_objective_put.rs  modify_slot_put.rs  objective_image_post.rs  objective_list_get.rs  observation_get.rs  request_common.rs  reset_get.rs  restore_backup_put.rs  shoot_image_get.rs
src/http_handler/http_response/: achievements.rs  annoucements.rs  available_slots.rs  beacon_position.rs  configure_simulation.rs  control_satellite.rs  create_backup.rs  daily_map.rs  delete_objective.rs  mod.rs  modify_objective.rs  modify_slot.rs  objective_image.rs  objective_list.rs  observation.rs  reset.rs  response_common.rs  restore_backup.rs  shoot_image.rs
src/imaging/: camera_controller.rs  cycle_state.rs  file_based_buffer.rs  map_image.rs  mod.rs  sub_buffer.rs
src/mode_control/: base_mode.rs  mod.rs  mode_context.rs  signal.rs
src/mode_control/global_mode/: global_mode.rs  in_orbit_mode.rs
src/mode_control/mode/: global_mode.rs  in_orbit_mode.rs  mod.rs  orbit_return_mode.rs  zo_prep_mode.rs  zo_retrieval_mode.rs
src/objective/: bayesian_set.rs  beacon_controller.rs  beacon_objective.rs  beacon_objective_done.rs  known_img_objective.rs  mod.rs  secret_img_objective.rs  tests.rs
src/scheduling/: atomic_decision_cube.rs  end_condition.rs  mod.rs  score_grid.rs  task_controller.rs  tests.rs
src/scheduling/task/: base_task.rs  image_task.rs  mod.rs  switch_state_task.rs  vel_change_task.rs
src/util/: keychain.rs  logger.rs  mod.rs
src/util/math/: mod.rs
