[package]
name = "melvin-ob"
version = "0.1.0"
authors = ["Felix Renzikowski <felix.renzi@outlook.de", "Nicolai Kallis <nicolai.kallis@gmx.de>"]
edition = "2021"

description = "On-Board software MELVIN for the 2024 ESA Computer in a Room Challenge"
license-file = "LICENSE"
repository = "https://github.com/CIARC-CUIYC/melvin-ob"
keywords = []
categories = []

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3.31"
bytes = "1.8.0"
num = "0.4.3"
strum = "0.26.3"
strum_macros = "0.26.4"
bitvec = { version = "1.0.1", features = ["serde"] }
futures = "0.3.31"
image = "0.25.5"
bincode = "1.3.3"
plotters = "0.3.7"
tokio-util = "0.7.13"

[lints.clippy]
correctness = "deny"
suspicious = "deny"
cargo = "allow"
perf = "warn"
style = "warn"
complexity = "warn"
pedantic = "warn"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true # TODO: this is enabled for compatibility for now
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false




