[package]
name = "melvin-ob"
authors = ["Felix Renzikowski <felix.renzi@outlook.de", "Nicolai Kallis <nicolai.kallis@gmx.de>"]
version = "0.6.0"
edition = "2024"
rust-version = "1.85.0"
license-file = "LICENSE"
repository = "https://github.com/CIARC-CUIYC/melvin-ob"
readme = "README.md"
description = """
A high performance asychronous compute framework for system simulation.
"""
categories = ["aerospace", "science"]

[dependencies]
reqwest = { version = "0.12.9", default-features = false, features = ["json", "multipart", "stream", "http2", "deflate" ] }
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "macros"] }
tokio-util = {version = "0.7.13"}
async-trait = "0.1.86"
reqwest-eventsource = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3.31"
strum = "0.27.0"
strum_macros = "0.27.0"
bitvec = { version = "1.0.1", features = ["serde"] }
futures = "0.3.31"
fixed = {version = "1.28.0", features = ["serde", "num-traits"]}
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "rayon"] }
prost = "0.13"
num = "0.4.3"
libc = "0.2.169"
regex = "1.11.1"
rand = "0.9.0"
kiddo = "5.0.3"
csv = "1.3.1"
itertools = "0.13.0"

[lints.clippy]
correctness = "deny"
suspicious = "deny"
cargo = "allow"
perf = "warn"
style = "warn"
complexity = "warn"
pedantic = "warn"

[profile.release]
opt-level = 3
debug = true
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true # TODO: this is enabled for compatibility for now
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[build-dependencies]
prost-build = "0.13.4"