[package]
name = "melvin-ob"
authors = ["Felix Renzikowski <felix.renzi@outlook.de", "Nicolai Kallis <nicolai.kallis@gmx.de>", "Christoph Walcher <chris@wiomoc.de>"]
version = "1.0.0"
edition = "2024"
rust-version = "1.85.0"
license-file = "LICENSE"
repository = "https://github.com/CIARC-CUIYC/melvin-ob"
readme = "README.md"
description = """
A highly adapted and performant binary with a great focus on planning and scheduling.
This was implemented for the 2024/2025 ESA Computer in a Room Challenge
"""
categories = ["aerospace", "science"]

[dependencies]
reqwest = { version = "0.12.9", default-features = false, features = ["json", "multipart", "stream", "http2", "deflate"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "macros"] }
tokio-util = { version = "0.7.13" }
async-trait = "0.1.86"
reqwest-eventsource = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3.31"
strum = "0.27.0"
strum_macros = "0.27.0"
bitvec = { version = "1.0.1", features = ["serde"] }
futures = "0.3.31"
fixed = { version = "1.28.0", features = ["serde", "num-traits"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "rayon"] }
prost = "0.13"
num = "0.4.3"
libc = "0.2.169"
regex = "1.11.1"
rand = "0.9.0"
kiddo = "5.0.3"
itertools = "0.14.0"
bincode = { version = "2.0.1", features = ["serde"] }
serde_json = "1.0.140"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0"}


[lints.clippy]
correctness = "deny"
suspicious = "deny"
cargo = "allow"
perf = "warn"
style = "warn"
complexity = "warn"
pedantic = "warn"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
codegen-units = 256
incremental = true
rpath = false

[profile.release]
opt-level = 3
debug = true
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true # TODO: this is enabled for compatibility for now
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 4
rpath = false